[hotfix] Improve toggle button layout

--- a/ui/deployment/sp-theme.scss
+++ b/ui/deployment/sp-theme.scss
@@ -174,6 +174,19 @@ $accent: map-get($custom-theme-light, accent);
     background: #121212;
   }
 
+  .mat-button-toggle-checked {
+    background: var(--color-accent);
+    color: var(--color-bg-0);
+  }
+
+  .mat-button-toggle-checked.mat-button-toggle-appearance-standard {
+    color: var(--color-bg-0);
+  }
+
+  .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    line-height: 30px;
+  }
+
   .mat-toolbar.mat-primary {
     color: #121212;
   }
@@ -217,6 +230,19 @@ $accent: map-get($custom-theme-light, accent);
   .base-style {
     color: #121212;
     background: #FFFFFF;
+  }
+
+  .mat-button-toggle-checked {
+    background: var(--color-accent);
+    color: var(--color-bg-0);
+  }
+
+  .mat-button-toggle-checked.mat-button-toggle-appearance-standard {
+    color: var(--color-bg-0);
+  }
+
+  .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    line-height: 30px;
   }
 
 
