--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -18,9 +18,10 @@
 
 <div class="h-100">
     <div class="box"
-         [ngStyle]='{background: configuredWidget.baseAppearanceConfig.backgroundColor,
+         [ngStyle]="{background: configuredWidget.baseAppearanceConfig.backgroundColor,
          color: configuredWidget.baseAppearanceConfig.textColor,
-         border: currentlyConfiguredWidgetId === configuredWidget._id ? "2px solid var(--color-accent)" : "2px solid " + configuredWidget.baseAppearanceConfig.backgroundColor}'
+         height: (gridsterItemComponent.height - 13) + 'px',
+         border: currentlyConfiguredWidgetId === configuredWidget._id ? '4px solid var(--color-accent)' : '2px solid ' + configuredWidget.baseAppearanceConfig.backgroundColor}"
          [attr.data-cy]="'widget-' + configuredWidget.baseAppearanceConfig.widgetTitle">
         <div class="widget-header h-40" *ngIf="!previewMode">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="widget-header-text">
