[hotfix] Improve layout of button toggle in general configuration view

--- a/ui/src/app/configuration/general-configuration/general-configuration.component.html
+++ b/ui/src/app/configuration/general-configuration/general-configuration.component.html
@@ -31,7 +31,7 @@
                     <div class="subsection-title">Host and Port</div>
                     <div fxLayout="column" fxFlex="100">
                         <div fxLayout="row">
-                            <div>
+                            <div fxLayout="row" fxLayoutAlign="start center">
                                 <mat-button-toggle-group name="protocol" aria-label="Protocol"
                                     formControlName="protocol">
                                     <mat-button-toggle value="http">http</mat-button-toggle>
