--- a/ui/src/app/configuration/general-configuration/general-configuration.component.html
+++ b/ui/src/app/configuration/general-configuration/general-configuration.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   ~
   -->
-<sp-configuration-component [activeLink]="'general'">
+<sp-basic-nav-tabs [spNavigationItems]="tabs" [activeLink]="'general'">
     <div fxLayout="column" class="page-container-padding">
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" *ngIf="formReady">
             <form [formGroup]="parentForm" fxFlex="100" fxLayout="column">
@@ -89,4 +89,4 @@
         </div>
 
     </div>
-</sp-configuration-component>
+</sp-basic-nav-tabs>
