--- a/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
+++ b/ui/src/app/configuration/messaging-configuration/messaging-configuration.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<sp-configuration-component [activeLink]="'messaging'">
+<sp-basic-nav-tabs [spNavigationItems]="tabs" [activeLink]="'messaging'">
     <div fxLayout="column" class="page-container-padding">
         <sp-split-section title="Kafka Settings" subtitle="Manage Kafka settings for pipeline communication">
             <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="page-container-padding-inner">
@@ -83,4 +83,4 @@
             </div>
         </sp-split-section>
     </div>
-</sp-configuration-component>
+</sp-basic-nav-tabs>
