--- a/ui/src/app/connect/components/filter-toolbar/filter-toolbar.component.html
+++ b/ui/src/app/connect/components/filter-toolbar/filter-toolbar.component.html
@@ -1,16 +1,34 @@
-<div fxLayout="row" class="fixed-height data-marketplace-options">
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one or more
+  ~ contributor license agreements.  See the NOTICE file distributed with
+  ~ this work for additional information regarding copyright ownership.
+  ~ The ASF licenses this file to You under the Apache License, Version 2.0
+  ~ (the "License"); you may not use this file except in compliance with
+  ~ the License.  You may obtain a copy of the License at
+  ~
+  ~    http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  ~
+  -->
+
+<div fxLayout="row" class="fixed-height">
 
     <div class="data-marketplace-options-item pl-5" style="margin-top:8px;" fxLayoutAlign="start center"
          fxLayout="row">
         <mat-icon color="accent">search</mat-icon>
-        <mat-form-field class="form-style">
+        <mat-form-field class="form-style" color="accent" floatLabel="never">
             <input matInput placeholder="Find Element" value="" (input)="updateFilterTerm($event.target.value)"
                    name="something">
         </mat-form-field>
     </div>
     <div class="data-marketplace-options-item">
         <mat-form-field color="accent">
-            <mat-select [(value)]="selectedType" (selectionChange)="filterAdapter($event)">
+            <mat-select [(value)]="currentFilter.selectedType" (selectionChange)="filterAdapter($event)">
                 <mat-option *ngFor="let type of adapterTypes" [value]="type">
                     {{type}}
                 </mat-option>
@@ -19,7 +37,7 @@
     </div>
     <div class="data-marketplace-options-item">
         <mat-form-field color="accent">
-            <mat-select [(value)]="selectedCategory" (selectionChange)="filterAdapter($event)">
+            <mat-select [(value)]="currentFilter.selectedCategory" (selectionChange)="filterAdapter($event)">
                 <mat-option *ngFor="let category of adapterCategories" [value]="category.code">
                     {{category.label}}
                 </mat-option>
@@ -27,5 +45,4 @@
         </mat-form-field>
     </div>
     <span fxFlex></span>
-
 </div>
