--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.scss
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-property-row/event-property-row.component.scss
@@ -28,3 +28,19 @@
 .checkbox-selected {
     opacity: 1 !important;
 }
+
+.timestamp-property {
+    margin-left: 15px;
+    border-radius: 10px;
+    background: var(--color-processor);
+    padding: 0px 10px;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.timestamp-icon {
+    font-size: 12px;
+}
+
+
+
