--- a/ui/src/app/connect/components/new-adapter/new-adapter.component.html
+++ b/ui/src/app/connect/components/new-adapter/new-adapter.component.html
@@ -19,12 +19,12 @@
 <sp-basic-view [padding]="true" [showBackLink]="false">
 
     <div nav fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-        <button mat-icon-button (click)="removeSelection()">
+        <button mat-icon-button (click)="removeSelection()" matTooltip="Cancel">
             <i class="material-icons">close</i>
         </button>
     </div>
     <div fxLayout="column" fxLayoutAlign="center stretch" *ngIf="adapter">
-        <div fxLayout="column" fxFlex="100" class="p-10">
+        <div fxLayout="column" fxFlex="100">
             <div fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon *ngIf="isDataSetDescription" class="historic">lens</mat-icon>
                 <mat-icon *ngIf="isDataStreamDescription" class="real-time">lens
@@ -69,7 +69,7 @@
             </mat-step>
 
             <mat-step>
-                <ng-template matStepLabel>Define Event Schema</ng-template>
+                <ng-template matStepLabel>Configure fields</ng-template>
                 <sp-event-schema #eschema fxLayout="column" fxFlex="100"
                                  [(isEditable)]="isEditable"
                                  [adapterDescription]="adapter"
