--- a/ui/src/scss/sp/layout.scss
+++ b/ui/src/scss/sp/layout.scss
@@ -88,6 +88,9 @@
   margin-right: 5px;
 }
 
+.ml-5 {
+  margin-left: 5px;
+}
 
 .mr-15 {
   margin-right: 15px;
@@ -162,4 +165,33 @@ img {
 
 .mat-expansion-panel-body {
   padding: 0 !important;
+}
+
+.small-select mat-select {
+  background-color: rgba(58, 40, 8, 0.12);
+  padding: 6px 10px 6px 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.small-select .mat-select-value {
+  font-size: 16px;
+  color: var(--color-accent);
+}
+
+.small-select .mat-form-field-underline {
+  display: none;
+}
+
+.small-select mat-select-trigger div>i {
+  margin-right: 8px;
+}
+
+.small-select .mat-form-field-infix {
+  padding: 0;
+  border-top: 0;
+}
+
+.small-select .mat-form-field-wrapper {
+  padding-bottom: 0;
 }
